[metadata]
name = networking_aci
summary = This project tracks the work to provide a simple integration of Cisco ACI with Neutron via hierarchical port bindings.
version = 2015.1.1
description-file =
    README.rst
license = Apache License, Version 2.0
author = SAP SE
author-email = andrew.battye@sap.com
home-page = http://www.sap.com/
url = https://github.com/sapcc/networking-aci
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
keywords = openstack neutron ACI networking

[files]
packages = networking_aci
data_files =
    /etc/neutron/plugins/ml2 =
        etc/neutron/plugins/ml2/ml2_conf_aci.ini.sample

[options.extras_require]
acicobra = acicobra>=4.2; acimodel>=4.2

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = networking_aci/locale
domain = networking-aci

[update_catalog]
domain = networking-aci
output_dir = networking_aci/locale
input_file = networking_aci/locale/networking-aci.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = networking_aci/locale/networking-aci.pot

[entry_points]
console_scripts =
    neutron-aci-agent = networking_aci.plugins.ml2.drivers.mech_aci.agent.entry_point:main
    neutron-aci-tool = networking_aci.utils.aci_tool:main
neutron.ml2.mechanism_drivers =
    aci = networking_aci.plugins.ml2.drivers.mech_aci.driver:CiscoACIMechanismDriver
neutron.db.alembic_migrations =
    networking-aci = networking_aci.db.migration:alembic_migrations

aci.tenant.managers=
    hash_ring = networking_aci.plugins.ml2.drivers.mech_aci.tenant_managers.hash_ring_manager:HashRingTenantManager
    simple = networking_aci.plugins.ml2.drivers.mech_aci.tenant_managers.simple_manager:SimpleTenantManager
